# Controltheorylibrary

./: .gitignore  .readthedocs.yaml  CNAME  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
Site1/: About.html
Site1/blog/: blog.html  blog.json  post-2.html  post-3.html  post.html
blog/: post-4.html  post-5.html
controltheorylib/: __init__.py  bode.py  control.py  controlfunctions.py  controlsystem.py  mech_vis.py  nyquist.py  pzmap.py
controltheorylib.egg-info/: PKG-INFO  SOURCES.txt
docs/: api.rst  conf.py  documentation.html  examples.html  examples.rst  index.html  index.rst  installation.html  installation.rst  requirements.txt  styles.css  tutorials.html  usage.rst
docs/source/: BlockDiagram_examples.rst  BodePlot_examples.rst  Example Gallery.rst  MechanicalVisualization_examples.rst  Module index.rst  Nyquist_examples.rst  PoleZeroMap_examples.rst  conf.py  contact.rst  index.rst  installation.rst  manim_gallery.py  requirements.txt
examples/: MassSpringDamperSystem.py
examples/Bodeplots/: Animation_Example7.py  Animation_example1.py  Animation_example2.py  Animation_example3.py  Animation_example4.py  Animation_example5.py  Animation_example6.py  Animation_example8.py  Asymptotes.py  Bodeplots.py  ControlLooping.py  README.md  Stability_margins.py  Static_example1.py  Static_example2.py  Static_example3.py  Static_example4.py  Static_example5.py  Static_example6.py  example.py  test.py  valuetracker.py
site/: Contact.html  index.css  index.html
tests/: test_MassSpringDamper.py  test_TF.py  test_controlfunctions.py
(+299 files in other folders)
